major overhaul to send/receive protocol in order to handle entire csvs

--- a/config.json
+++ b/config.json
@@ -6,5 +6,9 @@
   ],
   "multitest": false,
   "test": "a",
-  "filename": "accel"
+  "filenames": [
+    "accel",
+    "strain",
+    "bevel"
+  ]
 }
